syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.hashemalayan.nosql.shared";
option java_outer_classname = "ReplicationProto";

import "common.proto";

service ReplicationService {
  rpc CreateCollection(CreateCollectionReplicationMessage) returns (ReplicationResponse);
  rpc EditCollection(EditCollectionReplicationMessage) returns (ReplicationResponse);
  rpc DeleteCollection(DeleteCollectionReplicationMessage) returns (ReplicationResponse);
  rpc SetCollectionDocument(SetCollectionDocumentReplicationMessage) returns (ReplicationResponse);
  rpc DocumentAffinityRedirection(SetCollectionDocumentRequest) returns (SetCollectionDocumentResponse);
}

message SetCollectionDocumentReplicationMessage {
  string collection_id = 1;
  string document_id = 2;
  string document = 3;
}

message DeleteCollectionReplicationMessage {
  string collection_id = 1;
}

message EditCollectionReplicationMessage{
  string collection_id = 1;
  string collection_name = 2;
}

message CreateCollectionReplicationMessage {
  CollectionMetaData meta_data = 1;
  string schema = 2;
}

message ReplicationMessage {
  oneof message {
    CreateCollectionReplicationMessage create_collection_replication_message = 1;
    EditCollectionReplicationMessage edit_collection_replication_message = 2;
    DeleteCollectionReplicationMessage delete_collection_replication_message = 3;
    SetCollectionDocumentReplicationMessage set_collection_document_replication_message = 4;
  }
}

message ReplicationResponse {
  int32 responder_port = 1;
}